--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "dev:server": "cd server && npm run dev",
     "install": "cd client && npm install",
     "dev:client": "cd client && npm run dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "build":"cd client && npm run build"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "nodemon": "^3.1.9"
+  },
+  "dependencies": {
+    "concurrently": "^9.1.2",
+    "react-router-dom": "^7.1.5"
   }
 }
