--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc-watch --onSuccess \"nodemon dist/app.js\""
+    "dev": "tsc-watch --onSuccess \"nodemon dist/app.js\"",
+    "start": "tsc && node dist/app.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
     "nodemon": "^3.1.9",
     "tsc-watch": "^6.2.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.9.6",
     "morgan": "^1.10.0"
