--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:client": "cd client && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "build":"cd client && npm run build"
+    "build": "cd client && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "concurrently": "^9.1.2",
+    "dotenv": "^16.5.0",
+    "express-validator": "^7.2.1",
     "react-router-dom": "^7.1.5"
   }
 }
